# bicycle

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/api/: Cargo.toml
crates/api-macros/: Cargo.toml
crates/api-macros/src/: lib.rs
crates/api/src/: context.rs  datastream.rs  environment.rs  function.rs  graph.rs  lib.rs  optimizer.rs  prelude.rs  state.rs
crates/connectors/: Cargo.toml
crates/connectors/src/: lib.rs
crates/connectors/src/socket/: config.rs  mod.rs  sink.rs  source.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: ffi.rs  lib.rs
crates/wasm-runtime/: Cargo.toml
crates/wasm-runtime/src/: executor.rs  host.rs  lib.rs  module.rs
jobs/: echo.yaml  wordcount-custom.yaml  wordcount.yaml
jobs/wordcount-plugin/: Cargo.toml
jobs/wordcount-plugin/src/: lib.rs  main.rs
proto/: control.proto
test-jobs/wordcount/: Cargo.toml  Dockerfile
test-jobs/wordcount/src/: main.rs
