[workspace]
resolver = "2"
members = [
  "crates/core",
  "crates/runtime",
  "crates/operators",
  "crates/network",
  "crates/state",
  "crates/checkpoint",
  "crates/protocol",
  "crates/connectors",
  "crates/api",
  "crates/api-macros",
  "crates/plugin",
  "bin/mini-runner",
  "bin/jobmanager",
  "bin/worker",
  "bin/webui",
  "bin/bicycle",
  "bin/socket-test",
  "bin/wordcount-socket",
  "test-jobs/wordcount",
  "jobs/wordcount-plugin",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bincode = "1.3"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dashmap = "5"
futures = "0.3"
parking_lot = "0.12"
prost = "0.12"
prost-types = "0.12"
rocksdb = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net", "io-util", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec"] }
tonic = "0.10"
tonic-build = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rdkafka = { version = "0.36", features = ["cmake-build", "ssl"] }
# pulsar = "6.3"  # Optional: uncomment when needed
hostname = "0.4"
protobuf-src = "1"
libloading = "0.8"
