[package]
name = "bicycle-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Native plugin support for Bicycle streaming jobs (FFI/cdylib)"

[dependencies]
bicycle-api = { path = "../api" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
tokio.workspace = true
