[package]
name = "bicycle-wasm-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "WASM runtime for executing Bicycle streaming functions"

[dependencies]
wasmtime.workspace = true
wasmtime-wasi.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

# For job graph parsing
bicycle-api = { path = "../api", default-features = false }
