[package]
name = "wordcount-plugin"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Word count example as a native Bicycle plugin"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "wordcount-plugin"
path = "src/main.rs"

[dependencies]
bicycle-api = { path = "../../crates/api" }
bicycle-plugin = { path = "../../crates/plugin" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
