[package]
name = "wordcount"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wordcount"
path = "src/main.rs"

[dependencies]
bicycle-api = { path = "../../crates/api" }
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync"] }
